Updated css bug on small screens

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -58,13 +58,26 @@
 .header-notice {
   color: white;
   text-decoration: none;
-  padding: 10px;
+  user-select: none;
   border-radius: 6px;
   background-color: #cd7217;
   display: flex;
+}
+
+.notice-icon {
+  display: flex;
   align-items: center;
-  user-select: none;
+  justify-content: center;
+  padding: 10px;
+}
+
+.notice-text {
+  background-color: #00000020;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 10px;
   p {
-    margin: 0 0 0 10px;
+    margin: 0;
   }
 }
